--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "autoprefixer": "^10.3.7",
     "css-loader": "^6.4.0",
+    "file-loader": "^6.2.0",
     "import-loader": "^1.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.0.1",
